feat: add SuperBuilder support to Trainee, Trainer, and User models; implement unit tests for login attempts and database latency health indicators