@@ -1,7 +1,6 @@
 package com.gym.crmspringboot.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.gym.crmspringboot.dto.request.TraineeRegistrationRequest;
 import com.gym.crmspringboot.dto.request.UpdateTraineeRequest;
 import com.gym.crmspringboot.dto.response.RegistrationResponse;
@@ -12,194 +11,174 @@ import com.gym.crmspringboot.mapper.TraineeMapper;
 import com.gym.crmspringboot.mapper.TrainerMapper;
 import com.gym.crmspringboot.model.Trainee;
 import com.gym.crmspringboot.model.Trainer;
-import java.time.LocalDate;
-import java.time.Month;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentMatchers;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.MediaType;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
-import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
+import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-
-import java.util.Arrays;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(TraineeController.class)
+@ExtendWith(MockitoExtension.class)
 class TraineeControllerTest {
 
-    @Autowired
     private MockMvc mockMvc;
+    private ObjectMapper objectMapper;
 
-    private final ObjectMapper objectMapper = new ObjectMapper()
-            .registerModule(new JavaTimeModule());
-
-    @MockitoBean
+    @Mock
     private GymFacade gymFacade;
-
-    @MockitoBean
+    @Mock
     private TraineeMapper traineeMapper;
-
-    @MockitoBean
+    @Mock
     private TrainerMapper trainerMapper;
 
+    @InjectMocks
+    private TraineeController traineeController;
+
+    @BeforeEach
+    void setUp() {
+        mockMvc = MockMvcBuilders.standaloneSetup(traineeController).build();
+        objectMapper = new ObjectMapper();
+        objectMapper.findAndRegisterModules();
+    }
+
     @Test
-    void registerTrainee_ShouldReturnCreatedStatusAndCredentials() throws Exception {
+    void registerTrainee_ReturnsStatusCreated() throws Exception {
         // Arrange
         TraineeRegistrationRequest request = TraineeRegistrationRequest.builder()
                 .firstName("John")
                 .lastName("Doe")
-                .dateOfBirth(LocalDate.of(1990, Month.JANUARY, 1))
-                .address("123 Main St")
                 .build();
+
         Trainee trainee = new Trainee();
         Trainee createdTrainee = new Trainee();
-        createdTrainee.setUsername("John.Doe");
-        createdTrainee.setPassword("password123");
 
-        RegistrationResponse responseDto = new RegistrationResponse("John.Doe", "password123");
+        RegistrationResponse response = RegistrationResponse.builder()
+                .username("username")
+                .password("password")
+                .build();
 
         when(traineeMapper.toEntity(any(TraineeRegistrationRequest.class))).thenReturn(trainee);
         when(gymFacade.registerTrainee(trainee)).thenReturn(createdTrainee);
-        when(traineeMapper.toRegistrationResponse(createdTrainee)).thenReturn(responseDto);
+        when(traineeMapper.toRegistrationResponse(createdTrainee)).thenReturn(response);
 
-        // Act & Assert
-        mockMvc.perform(MockMvcRequestBuilders.post("/api/v1/trainees")
+        // Act
+        // Assert
+        mockMvc.perform(post("/api/v1/trainees")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
-                .andExpect(MockMvcResultMatchers.status().isCreated())
-                .andExpect(MockMvcResultMatchers.jsonPath("$.username").value("John.Doe"))
-                .andExpect(MockMvcResultMatchers.jsonPath("$.password").value("password123"));
-
-        verify(traineeMapper).toEntity(any(TraineeRegistrationRequest.class));
-        verify(gymFacade).registerTrainee(trainee);
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.username").value("username"))
+                .andExpect(jsonPath("$.password").value("password"));
     }
 
     @Test
-    void getTraineeProfile_ShouldReturnOkStatusAndProfile() throws Exception {
+    void getTraineeProfile_ReturnsProfile() throws Exception {
         // Arrange
         String username = "John.Doe";
-        String password = "password123";
         Trainee trainee = new Trainee();
-        TraineeProfileResponse profileResponse = TraineeProfileResponse.builder()
+
+        TraineeProfileResponse response = TraineeProfileResponse.builder()
                 .firstName("John")
                 .lastName("Doe")
-                .dateOfBirth(LocalDate.of(1990, Month.JANUARY, 1))
-                .address("123 Main St")
                 .isActive(true)
-                .trainers(List.of())
                 .build();
 
-        when(gymFacade.getTraineeByUsername(username, password)).thenReturn(trainee);
-        when(traineeMapper.toProfileResponse(trainee)).thenReturn(profileResponse);
+        when(gymFacade.getTraineeByUsername(username)).thenReturn(trainee);
+        when(traineeMapper.toProfileResponse(trainee)).thenReturn(response);
 
-        // Act & Assert
-        mockMvc.perform(MockMvcRequestBuilders.get("/api/v1/trainees/{username}", username)
-                        .param("password", password)
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(MockMvcResultMatchers.status().isOk());
-
-        verify(gymFacade).getTraineeByUsername(username, password);
-        verify(traineeMapper).toProfileResponse(trainee);
+        // Act
+        // Assert
+        mockMvc.perform(get("/api/v1/trainees/{username}", username))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName").value("John"));
     }
 
     @Test
-    void updateTraineeProfile_ShouldReturnOkStatusAndUpdatedProfile() throws Exception {
+    void updateTraineeProfile_ReturnsUpdatedProfile() throws Exception {
         // Arrange
         String username = "John.Doe";
-        String password = "password123";
+
         UpdateTraineeRequest request = UpdateTraineeRequest.builder()
-                .firstName("John")
+                .firstName("JohnUpdated")
                 .lastName("Doe")
-                .dateOfBirth(LocalDate.of(1990, Month.JANUARY, 1))
-                .address("123 Main St")
                 .isActive(true)
                 .build();
+
         Trainee trainee = new Trainee();
         Trainee updatedTrainee = new Trainee();
-        TraineeProfileResponse profileResponse = TraineeProfileResponse.builder()
-                .firstName("John")
+
+        TraineeProfileResponse response = TraineeProfileResponse.builder()
+                .firstName("JohnUpdated")
                 .lastName("Doe")
-                .dateOfBirth(LocalDate.of(1990, Month.JANUARY, 1))
-                .address("123 Main St")
                 .isActive(true)
-                .trainers(List.of())
                 .build();
 
         when(traineeMapper.toEntity(any(UpdateTraineeRequest.class))).thenReturn(trainee);
-        when(gymFacade.updateTrainee(eq(username), eq(password), any(Trainee.class))).thenReturn(updatedTrainee);
-        when(traineeMapper.toProfileResponse(updatedTrainee)).thenReturn(profileResponse);
+        when(gymFacade.updateTrainee(trainee)).thenReturn(updatedTrainee);
+        when(traineeMapper.toProfileResponse(updatedTrainee)).thenReturn(response);
 
-        // Act & Assert
-        mockMvc.perform(MockMvcRequestBuilders.put("/api/v1/trainees/{username}", username)
-                        .param("password", password)
+        // Act
+        // Assert
+        mockMvc.perform(put("/api/v1/trainees/{username}", username)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
-                .andExpect(MockMvcResultMatchers.status().isOk());
-
-        verify(traineeMapper).toEntity(any(UpdateTraineeRequest.class));
-        verify(gymFacade).updateTrainee(eq(username), eq(password), any(Trainee.class));
-        verify(traineeMapper).toProfileResponse(updatedTrainee);
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName").value("JohnUpdated"));
     }
 
     @Test
-    void deleteTraineeProfile_ShouldReturnOkStatus() throws Exception {
+    void deleteTraineeProfile_ReturnsStatusOk() throws Exception {
         // Arrange
         String username = "John.Doe";
-        String password = "password123";
 
-        // Act & Assert
-        mockMvc.perform(MockMvcRequestBuilders.delete("/api/v1/trainees/{username}", username)
-                        .param("password", password))
-                .andExpect(MockMvcResultMatchers.status().isOk());
+        // Act
+        // Assert
+        mockMvc.perform(delete("/api/v1/trainees/{username}", username))
+                .andExpect(status().isOk());
 
-        verify(gymFacade).deleteTrainee(username, password);
+        verify(gymFacade).deleteTrainee(username);
     }
 
     @Test
-    void updateTraineeTrainers_ShouldReturnOkStatusAndTrainerList() throws Exception {
+    void updateTraineeTrainers_ReturnsUpdatedTrainersList() throws Exception {
         // Arrange
         String username = "John.Doe";
-        String password = "password123";
-        List<String> trainerUsernames = Arrays.asList("Trainer.One", "Trainer.Two");
+        List<String> trainerUsernames = List.of("Trainer.One");
+        Trainer trainer = new Trainer();
+        List<Trainer> updatedTrainers = List.of(trainer);
 
-        Trainer trainer1 = new Trainer();
-        Trainer trainer2 = new Trainer();
-        List<Trainer> updatedTrainers = Arrays.asList(trainer1, trainer2);
-
-        TrainerItemResponse itemResponse1 = TrainerItemResponse.builder()
+        TrainerItemResponse itemResponse = TrainerItemResponse.builder()
                 .username("Trainer.One")
-                .firstName("John")
-                .lastName("Doe")
-                .specialization("CARDIO")
-                .build();
-        TrainerItemResponse itemResponse2 = TrainerItemResponse.builder()
-                .username("Trainer.Two")
-                .firstName("Jane")
-                .lastName("Smith")
-                .specialization("STRENGTH")
+                .firstName("Trainer")
+                .lastName("One")
                 .build();
 
-        when(gymFacade.updateTraineesTrainerList(eq(username), eq(password), ArgumentMatchers.any())).thenReturn(updatedTrainers);
-        when(trainerMapper.toItemResponse(trainer1)).thenReturn(itemResponse1);
-        when(trainerMapper.toItemResponse(trainer2)).thenReturn(itemResponse2);
+        when(gymFacade.updateTraineesTrainerList(eq(username), anyList())).thenReturn(updatedTrainers);
+        when(trainerMapper.toItemResponse(trainer)).thenReturn(itemResponse);
 
-        // Act & Assert
-        mockMvc.perform(MockMvcRequestBuilders.put("/api/v1/trainees/{username}/trainers", username)
-                        .param("password", password)
+        // Act
+        // Assert
+        mockMvc.perform(put("/api/v1/trainees/{username}/trainers", username)
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(trainerUsernames)))
-                .andExpect(MockMvcResultMatchers.status().isOk())
-                .andExpect(MockMvcResultMatchers.jsonPath("$.length()").value(2));
-
-        verify(gymFacade).updateTraineesTrainerList(eq(username), eq(password), ArgumentMatchers.any());
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].username").value("Trainer.One"));
     }
 }
